Cherry-pick r289859. rdar://problem/88491516

Skip positioned objects and line break boxes as they have no affect on width
    https://bugs.webkit.org/show_bug.cgi?id=236514

    Patch by Brandon Stewart <brandonstewart@apple.com> on 2022-02-15
    Reviewed by Myles C. Maxfield.

    Align computeInlineDirectionPositionsForSegment() and computeExpansionForJustifiedText() logic.
    Skipping positioned objects and line break boxes as they will not affect the width.

    * rendering/LegacyLineLayout.cpp:
    (WebCore::LegacyLineLayout::computeExpansionForJustifiedText):

    Canonical link: https://commits.webkit.org/247300@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289859 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.254@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290925 268f45cc-cd09-0410-ab3c-d52691b4dbfc